care/force-app/main/default/objects/Regulation__c/fields/Nurse_Medication_Administration_Info_RH__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Medication_Administration_Info_RH__c</fullName>
    <inlineHelpText>State Regs</inlineHelpText>
    <label>Nurse Medication Administration Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>