care/force-app/main/default/objects/Regulation__c/fields/Nurses_can_administer_med_injections__c.field-meta.xml
<CustomField>
    <fullName>Nurses_can_administer_med_injections__c</fullName>
    <inlineHelpText>Nurses can administer injectable medications</inlineHelpText>
    <label>Nurses can administer med. injections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>