care/force-app/main/default/objects/Regulation__c/fields/Ombudsman_Authority__c.field-meta.xml
<CustomField>
    <fullName>Ombudsman_Authority__c</fullName>
    <label>Ombudsman Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>