care/force-app/main/default/objects/Regulation__c/fields/Ombudsman_Authority_NCC__c.field-meta.xml
<CustomField>
    <fullName>Ombudsman_Authority_NCC__c</fullName>
    <label>Ombudsman Authority NCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>