care/force-app/main/default/objects/Regulation__c/fields/Ombudsman_Life_Plan_Comm_Links__c.field-meta.xml
<CustomField>
    <fullName>Ombudsman_Life_Plan_Comm_Links__c</fullName>
    <label>Ombudsman (Life Plan Comm.) Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>