care/force-app/main/default/objects/Regulation__c/fields/Ombudsman_Links__c.field-meta.xml
<CustomField>
    <fullName>Ombudsman_Links__c</fullName>
    <label>Ombudsman Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>