care/force-app/main/default/objects/Regulation__c/fields/Ombudsman_Trends__c.field-meta.xml
<CustomField>
    <fullName>Ombudsman_Trends__c</fullName>
    <inlineHelpText>(tend to offer information, etc.)</inlineHelpText>
    <label>Ombudsman Trends</label>
    <length>255</length>
    <type>Text</type>
</CustomField>