care/force-app/main/default/objects/Regulation__c/fields/Ombudsman_Trends_NCC__c.field-meta.xml
<CustomField>
    <fullName>Ombudsman_Trends_NCC__c</fullName>
    <inlineHelpText>tends to offer information, etc.</inlineHelpText>
    <label>Ombudsman Trends NCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>