care/force-app/main/default/objects/Regulation__c/fields/Paying_for_SC_Medicaid_s_Benefits_Link__c.field-meta.xml
<CustomField>
    <fullName>Paying_for_SC_Medicaid_s_Benefits_Link__c</fullName>
    <inlineHelpText>Paying for Senior Care Medicaid&apos;s Benefits for Assisted Living Link</inlineHelpText>
    <label>Paying for SC Medicaid&apos;s Benefits Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>