care/force-app/main/default/objects/Regulation__c/fields/Paying_for_Senior_Care_State_Link__c.field-meta.xml
<CustomField>
    <fullName>Paying_for_Senior_Care_State_Link__c</fullName>
    <inlineHelpText>all forms of payment</inlineHelpText>
    <label>Paying for Senior Care State Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>