care/force-app/main/default/objects/Regulation__c/fields/Payment_Options__c.field-meta.xml
<CustomField>
    <fullName>Payment_Options__c</fullName>
    <inlineHelpText>(e.g. Medicaid waiver or other Medicaid program)</inlineHelpText>
    <label>Payment Options</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>