care/force-app/main/default/objects/Regulation__c/fields/Profess_License_Verification_Links__c.field-meta.xml
<CustomField>
    <fullName>Profess_License_Verification_Links__c</fullName>
    <inlineHelpText>Professional License Verification Links (SW, RN)</inlineHelpText>
    <label>Profess. License Verification Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>