care/force-app/main/default/objects/Regulation__c/fields/Profess_License_Verification_Links_RH__c.field-meta.xml
<CustomField>
    <fullName>Profess_License_Verification_Links_RH__c</fullName>
    <inlineHelpText>(e.g. NHA)</inlineHelpText>
    <label>Profess. License Verification Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>