care/force-app/main/default/objects/Regulation__c/fields/Professional_License_Verification_Link__c.field-meta.xml
<CustomField>
    <fullName>Professional_License_Verification_Link__c</fullName>
    <label>Professional License Verification Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>