care/force-app/main/default/objects/Regulation__c/fields/Provider_Specialist_Notes__c.field-meta.xml
<CustomField>
    <fullName>Provider_Specialist_Notes__c</fullName>
    <label>Provider Specialist Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>