care/force-app/main/default/objects/Regulation__c/fields/Respite_Program_Info__c.field-meta.xml
<CustomField>
    <fullName>Respite_Program_Info__c</fullName>
    <label>Respite Program Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>