care/force-app/main/default/objects/Regulation__c/fields/Rest_Home_State_Association_s__c.field-meta.xml
<CustomField>
    <fullName>Rest_Home_State_Association_s__c</fullName>
    <label>Rest  Home State Association(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>