care/force-app/main/default/objects/Regulation__c/fields/SHIP_SHINE_Link__c.field-meta.xml
<CustomField>
    <fullName>SHIP_SHINE_Link__c</fullName>
    <label>SHIP/SHINE Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>