care/force-app/main/default/objects/Regulation__c/fields/SNAP_Benefit_Info__c.field-meta.xml
<CustomField>
    <fullName>SNAP_Benefit_Info__c</fullName>
    <label>SNAP Benefit Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>