care/force-app/main/default/objects/Regulation__c/fields/Special_Focus_Facilities_last_2_yrs__c.field-meta.xml
<CustomField>
    <fullName>Special_Focus_Facilities_last_2_yrs__c</fullName>
    <label>Special Focus Facilities (last 2 yrs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>