care/force-app/main/default/objects/Regulation__c/fields/Specific_ADH_Accreditations__c.field-meta.xml
<CustomField>
    <fullName>Specific_ADH_Accreditations__c</fullName>
    <inlineHelpText>State-specific Adult Day Health Accreditations</inlineHelpText>
    <label>Specific ADH Accreditations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>