care/force-app/main/default/objects/Regulation__c/fields/Specific_Home_Mod_DME_Accreditations__c.field-meta.xml
<CustomField>
    <fullName>Specific_Home_Mod_DME_Accreditations__c</fullName>
    <inlineHelpText>State specific Home Modification/DME Accreditations</inlineHelpText>
    <label>Specific Home Mod./DME Accreditations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>