care/force-app/main/default/objects/Regulation__c/fields/SSI_Link__c.field-meta.xml
<CustomField>
    <fullName>SSI_Link__c</fullName>
    <label>SSI Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>