care/force-app/main/default/objects/Regulation__c/fields/State_Adult_Day_Health_Association_Link__c.field-meta.xml
<CustomField>
    <fullName>State_Adult_Day_Health_Association_Link__c</fullName>
    <inlineHelpText>State&apos;s Adult Day Health Association Link</inlineHelpText>
    <label>State Adult Day Health Association Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>