care/force-app/main/default/objects/Regulation__c/fields/State_Adult_Day_Health_Listing__c.field-meta.xml
<CustomField>
    <fullName>State_Adult_Day_Health_Listing__c</fullName>
    <label>State Adult Day Health Listing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>