care/force-app/main/default/objects/Regulation__c/fields/State_Aging_Elder_Services_Link__c.field-meta.xml
<CustomField>
    <fullName>State_Aging_Elder_Services_Link__c</fullName>
    <label>State Aging/Elder Services Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>