care/force-app/main/default/objects/Regulation__c/fields/State_ALC_Inspection_Survey_Results_Link__c.field-meta.xml
<CustomField>
    <fullName>State_ALC_Inspection_Survey_Results_Link__c</fullName>
    <inlineHelpText>State Assisted Living Inspection Survey Results Link</inlineHelpText>
    <label>State ALC Inspection Survey Results Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>