care/force-app/main/default/objects/Regulation__c/fields/State_ALC_Listing_Provider_Search_Link__c.field-meta.xml
<CustomField>
    <fullName>State_ALC_Listing_Provider_Search_Link__c</fullName>
    <inlineHelpText>State Assisted Living Listing/Provider Search Link</inlineHelpText>
    <label>State ALC Listing/Provider Search Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>