care/force-app/main/default/objects/Regulation__c/fields/State_ALC_Resident_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>State_ALC_Resident_Survey_Link__c</fullName>
    <label>State ALC Resident Survey Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>