care/force-app/main/default/objects/Regulation__c/fields/State_Attorney_Legal_Association_s__c.field-meta.xml
<CustomField>
    <fullName>State_Attorney_Legal_Association_s__c</fullName>
    <label>State Attorney/Legal Association(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>