care/force-app/main/default/objects/Regulation__c/fields/State_Bar_Attorney_License_Verification__c.field-meta.xml
<CustomField>
    <fullName>State_Bar_Attorney_License_Verification__c</fullName>
    <label>State Bar Attorney License Verification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>