care/force-app/main/default/objects/Regulation__c/fields/State_Consumer_Complaints_Info__c.field-meta.xml
<CustomField>
    <fullName>State_Consumer_Complaints_Info__c</fullName>
    <label>State Consumer Complaints Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>