care/force-app/main/default/objects/Regulation__c/fields/State_Driver_s_Record_Check_Process__c.field-meta.xml
<CustomField>
    <fullName>State_Driver_s_Record_Check_Process__c</fullName>
    <label>State Driver&apos;s Record Check Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>