care/force-app/main/default/objects/Regulation__c/fields/State_HHA_Association_Link__c.field-meta.xml
<CustomField>
    <fullName>State_HHA_Association_Link__c</fullName>
    <label>State HHA Association Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>