care/force-app/main/default/objects/Regulation__c/fields/State_Home_Care_Association_s_Link_s__c.field-meta.xml
<CustomField>
    <fullName>State_Home_Care_Association_s_Link_s__c</fullName>
    <label>State Home Care Association(s) Link(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>