care/force-app/main/default/objects/Regulation__c/fields/State_Inspection_Data_Link__c.field-meta.xml
<CustomField>
    <fullName>State_Inspection_Data_Link__c</fullName>
    <label>State Inspection Data Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>