care/force-app/main/default/objects/Regulation__c/fields/State_Legal_Aid_Clinic_Links__c.field-meta.xml
<CustomField>
    <fullName>State_Legal_Aid_Clinic_Links__c</fullName>
    <label>State Legal Aid Clinic Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>