care/force-app/main/default/objects/Regulation__c/fields/State_Listing_HHA_Link__c.field-meta.xml
<CustomField>
    <fullName>State_Listing_HHA_Link__c</fullName>
    <label>State Listing HHA Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>