care/force-app/main/default/objects/Regulation__c/fields/State_Listing_of_Home_Care_Providers_Lin__c.field-meta.xml
<CustomField>
    <fullName>State_Listing_of_Home_Care_Providers_Lin__c</fullName>
    <label>State Listing of Home Care Providers Lin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>