care/force-app/main/default/objects/Regulation__c/fields/State_listing_of_ILC_Links__c.field-meta.xml
<CustomField>
    <fullName>State_listing_of_ILC_Links__c</fullName>
    <label>State listing of ILC Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>