care/force-app/main/default/objects/Regulation__c/fields/State_Listing_of_Licensed_NCC_Link__c.field-meta.xml
<CustomField>
    <fullName>State_Listing_of_Licensed_NCC_Link__c</fullName>
    <label>State Listing of Licensed NCC Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>