care/force-app/main/default/objects/Regulation__c/fields/State_NCC_Resident_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>State_NCC_Resident_Survey_Link__c</fullName>
    <inlineHelpText>State Nursing Care Center Resident Survey Link</inlineHelpText>
    <label>State NCC Resident Survey Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>