care/force-app/main/default/objects/Regulation__c/fields/State_Regulations1_HHA__c.field-meta.xml
<CustomField>
    <fullName>State_Regulations1_HHA__c</fullName>
    <label>State Regulations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>