care/force-app/main/default/objects/Regulation__c/fields/State_Regulations_Adult_Day_Health__c.field-meta.xml
<CustomField>
    <fullName>State_Regulations_Adult_Day_Health__c</fullName>
    <inlineHelpText>State Regulations (e.g. staffing &amp; training requirements, etc.)</inlineHelpText>
    <label>State Regulations Adult Day Health</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>