care/force-app/main/default/objects/Regulation__c/fields/State_Regulations_Assisted_Living__c.field-meta.xml
<CustomField>
    <fullName>State_Regulations_Assisted_Living__c</fullName>
    <inlineHelpText>(General: i.e. LOC provided, onsite nursing, staff training, etc.)</inlineHelpText>
    <label>State Regulations Assisted Living</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>