care/force-app/main/default/objects/Regulation__c/fields/State_Regulations_Home_Modification_DME__c.field-meta.xml
<CustomField>
    <fullName>State_Regulations_Home_Modification_DME__c</fullName>
    <label>State Regulations Home Modification/DME</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>