care/force-app/main/default/objects/Regulation__c/fields/State_Regulations_Hospice__c.field-meta.xml
<CustomField>
    <fullName>State_Regulations_Hospice__c</fullName>
    <label>State Regulations Hospice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>