care/force-app/main/default/objects/Regulation__c/fields/State_Regulations_Legal_Practice_Trends__c.field-meta.xml
<CustomField>
    <fullName>State_Regulations_Legal_Practice_Trends__c</fullName>
    <label>State Regulations/Legal Practice Trends</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>