care/force-app/main/default/objects/Regulation__c/fields/State_Regulations_NCC_Dementia_Care__c.field-meta.xml
<CustomField>
    <fullName>State_Regulations_NCC_Dementia_Care__c</fullName>
    <label>State Regulations NCC Dementia Care</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>