care/force-app/main/default/objects/Regulation__c/fields/State_Regulations_NMHCA__c.field-meta.xml
<CustomField>
    <fullName>State_Regulations_NMHCA__c</fullName>
    <inlineHelpText>Worker&apos;s comp required, staff training, etc.</inlineHelpText>
    <label>State Regulations NMHCA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>