care/force-app/main/default/objects/Regulation__c/fields/State_Regulations_Nursing_Care_Centers__c.field-meta.xml
<CustomField>
    <fullName>State_Regulations_Nursing_Care_Centers__c</fullName>
    <inlineHelpText>General i.e. restraints allowed, training requirements, etc.</inlineHelpText>
    <label>State Regulations Nursing Care Centers</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>