care/force-app/main/default/objects/Regulation__c/fields/State_Regulations_Senior_Move_Managers__c.field-meta.xml
<CustomField>
    <fullName>State_Regulations_Senior_Move_Managers__c</fullName>
    <label>State Regulations Senior Move Managers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>