care/force-app/main/default/objects/Regulation__c/fields/State_Rest_Home_Listing__c.field-meta.xml
<CustomField>
    <fullName>State_Rest_Home_Listing__c</fullName>
    <inlineHelpText>Rest Home Listing/Provider Search Link</inlineHelpText>
    <label>State Rest Home Listing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>