care/force-app/main/default/objects/Regulation__c/fields/State_run_Veterans_Homes__c.field-meta.xml
<CustomField>
    <fullName>State_run_Veterans_Homes__c</fullName>
    <label>State-run Veterans Homes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>