care/force-app/main/default/objects/Regulation__c/fields/State_run_Veterans_Homes_Info_and_Inspec__c.field-meta.xml
<CustomField>
    <fullName>State_run_Veterans_Homes_Info_and_Inspec__c</fullName>
    <label>State-run Veterans Homes Info and Inspec</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>