care/force-app/main/default/objects/Regulation__c/fields/State_s_Contractor_License_Verific_Link__c.field-meta.xml
<CustomField>
    <fullName>State_s_Contractor_License_Verific_Link__c</fullName>
    <inlineHelpText>State&apos;s Home Improvement Contractor/General Contractor License Verification Link</inlineHelpText>
    <label>State&apos;s Contractor License Verific. Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>