care/force-app/main/default/objects/Regulation__c/fields/State_s_Elder_Care_Policy_Trends__c.field-meta.xml
<CustomField>
    <fullName>State_s_Elder_Care_Policy_Trends__c</fullName>
    <inlineHelpText>Aging services landscape</inlineHelpText>
    <label>State&apos;s Elder Care Policy Trends</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>