care/force-app/main/default/objects/Regulation__c/fields/State_s_Home_Modification_Assoc_Link__c.field-meta.xml
<CustomField>
    <fullName>State_s_Home_Modification_Assoc_Link__c</fullName>
    <inlineHelpText>State&apos;s Home Modification Association Link</inlineHelpText>
    <label>State&apos;s Home Modification Assoc. Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>