care/force-app/main/default/objects/Regulation__c/fields/State_s_Hospice_Association_Link__c.field-meta.xml
<CustomField>
    <fullName>State_s_Hospice_Association_Link__c</fullName>
    <label>State&apos;s Hospice Association Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>