care/force-app/main/default/objects/Regulation__c/fields/State_s_Hospice_Organization_Listing__c.field-meta.xml
<CustomField>
    <fullName>State_s_Hospice_Organization_Listing__c</fullName>
    <label>State&apos;s Hospice Organization Listing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>