care/force-app/main/default/objects/Regulation__c/fields/State_s_Listing_of_SMMs_Link__c.field-meta.xml
<CustomField>
    <fullName>State_s_Listing_of_SMMs_Link__c</fullName>
    <label>State&apos;s Listing of SMMs Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>