care/force-app/main/default/objects/Regulation__c/fields/State_s_Meals_on_Wheels_Resources_Link__c.field-meta.xml
<CustomField>
    <fullName>State_s_Meals_on_Wheels_Resources_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>(Massachusetts)</inlineHelpText>
    <label>State&apos;s Meals on Wheels Resources Link</label>
    <referenceTo>Senior_Care_Companies__c</referenceTo>
    <relationshipLabel>Regulations (State&apos;s Meals on Wheels Resources Link)</relationshipLabel>
    <relationshipName>Regulations3</relationshipName>
    <type>Lookup</type>
</CustomField>