care/force-app/main/default/objects/Regulation__c/fields/State_s_Name__c.field-meta.xml
<CustomField>
    <fullName>State_s_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>State&apos;s Name</label>
    <referenceTo>Senior_Care_Companies__c</referenceTo>
    <relationshipLabel>Regulations</relationshipLabel>
    <relationshipName>Regulations</relationshipName>
    <type>Lookup</type>
</CustomField>