care/force-app/main/default/objects/Regulation__c/fields/State_s_Support_Groups_Link__c.field-meta.xml
<CustomField>
    <fullName>State_s_Support_Groups_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>(Massachusetts)</inlineHelpText>
    <label>State&apos;s Support Groups Link</label>
    <referenceTo>Senior_Care_Companies__c</referenceTo>
    <relationshipLabel>Regulations (State&apos;s Support Groups Link)</relationshipLabel>
    <relationshipName>Regulations1</relationshipName>
    <type>Lookup</type>
</CustomField>