care/force-app/main/default/objects/Regulation__c/fields/State_Specific_Hospice_Accreditations__c.field-meta.xml
<CustomField>
    <fullName>State_Specific_Hospice_Accreditations__c</fullName>
    <label>State Specific Hospice Accreditations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>