care/force-app/main/default/objects/Regulation__c/fields/State_Specific_Information_on_ALC__c.field-meta.xml
<CustomField>
    <fullName>State_Specific_Information_on_ALC__c</fullName>
    <inlineHelpText>State-Specific Information on Assisted Livings</inlineHelpText>
    <label>State-Specific Information on ALC</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>