care/force-app/main/default/objects/Regulation__c/fields/State_Specific_Information_on_Rest_Homes__c.field-meta.xml
<CustomField>
    <fullName>State_Specific_Information_on_Rest_Homes__c</fullName>
    <label>State-Specific Information on Rest Homes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>