care/force-app/main/default/objects/Regulation__c/fields/State_specific_Insurance_Notes__c.field-meta.xml
<CustomField>
    <fullName>State_specific_Insurance_Notes__c</fullName>
    <label>State-specific Insurance Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>