care/force-app/main/default/objects/Regulation__c/fields/State_Specific_Prof_Certific_Agency__c.field-meta.xml
<CustomField>
    <fullName>State_Specific_Prof_Certific_Agency__c</fullName>
    <inlineHelpText>State-Specific Professional Certifications - Agency</inlineHelpText>
    <label>State-Specific Prof. Certific. Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>