care/force-app/main/default/objects/Regulation__c/fields/State_Specific_Prof_Certific_attorney__c.field-meta.xml
<CustomField>
    <fullName>State_Specific_Prof_Certific_attorney__c</fullName>
    <inlineHelpText>State-Specifc Professional Certifications - attorney</inlineHelpText>
    <label>State-Specific Prof. Certific.-attorney</label>
    <length>255</length>
    <type>Text</type>
</CustomField>