care/force-app/main/default/objects/Regulation__c/fields/State_Specific_Prof_Certific_individual__c.field-meta.xml
<CustomField>
    <fullName>State_Specific_Prof_Certific_individual__c</fullName>
    <label>State-Specific Prof. Certific-individual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>