care/force-app/main/default/objects/Regulation__c/fields/State_Specific_Prof_Certific_practice__c.field-meta.xml
<CustomField>
    <fullName>State_Specific_Prof_Certific_practice__c</fullName>
    <label>State-Specific Prof. Certific.-practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>