care/force-app/main/default/objects/Regulation__c/fields/State_Specific_Prof_Certification__c.field-meta.xml
<CustomField>
    <fullName>State_Specific_Prof_Certification__c</fullName>
    <inlineHelpText>State-Specific Professional Certifications</inlineHelpText>
    <label>State-Specific Prof. Certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>