care/force-app/main/default/objects/Regulation__c/fields/State_Subsidized_Care_Mgmt_Services__c.field-meta.xml
<CustomField>
    <fullName>State_Subsidized_Care_Mgmt_Services__c</fullName>
    <inlineHelpText>State Subsidized Care Management Services (state home care CMs)</inlineHelpText>
    <label>State Subsidized Care Mgmt. Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>