care/force-app/main/default/objects/Regulation__c/fields/State_Subsidized_Care_Mgmt_Services_Link__c.field-meta.xml
<CustomField>
    <fullName>State_Subsidized_Care_Mgmt_Services_Link__c</fullName>
    <inlineHelpText>State Subsidized Care Management Services Link(s)</inlineHelpText>
    <label>State Subsidized Care Mgmt Services Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>