care/force-app/main/default/objects/Regulation__c/fields/State_Subsidized_Home_Care_Programs__c.field-meta.xml
<CustomField>
    <fullName>State_Subsidized_Home_Care_Programs__c</fullName>
    <inlineHelpText>e.g. Medicaid Waiver</inlineHelpText>
    <label>State Subsidized Home Care Programs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>