care/force-app/main/default/objects/Regulation__c/fields/State_Subsidy_Programs_Info_HM_DME__c.field-meta.xml
<CustomField>
    <fullName>State_Subsidy_Programs_Info_HM_DME__c</fullName>
    <label>State Subsidy Programs Info HM/DME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>