care/force-app/main/default/objects/Regulation__c/fields/State_Subsidy_Programs_Link_ADH__c.field-meta.xml
<CustomField>
    <fullName>State_Subsidy_Programs_Link_ADH__c</fullName>
    <label>State Subsidy Programs Link ADH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>