care/force-app/main/default/objects/Regulation__c/fields/States_Senior_Move_Managers_Listing_Link__c.field-meta.xml
<CustomField>
    <fullName>States_Senior_Move_Managers_Listing_Link__c</fullName>
    <label>States Senior Move Managers Listing Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>