care/force-app/main/default/objects/Regulation__c/fields/Subsidized_Independent_Living_Link_s__c.field-meta.xml
<CustomField>
    <fullName>Subsidized_Independent_Living_Link_s__c</fullName>
    <label>Subsidized Independent Living Link(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>