care/force-app/main/default/objects/Regulation__c/fields/Supplemental_Security_Income_SSI_Info__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Security_Income_SSI_Info__c</fullName>
    <label>Supplemental Security Income (SSI) Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>