care/force-app/main/default/objects/Regulation__c/fields/Trend_of_requiring_private_pay_minimum__c.field-meta.xml
<CustomField>
    <fullName>Trend_of_requiring_private_pay_minimum__c</fullName>
    <inlineHelpText>Allowed to require private pay minimum before Medicaid bed qualification</inlineHelpText>
    <label>Trend of requiring private pay minimum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>