care/force-app/main/default/objects/Regulation__c/fields/Type_of_Rest_Home_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Rest_Home_Licenses__c</fullName>
    <label>Type of Rest Home Licenses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>